syntax = "proto3";

package iotfsdb;

import "google/protobuf/duration.proto";
import "enums.proto";
import "types.proto";

option java_package = "org.huebert.iotfsdb.api.grpc.proto";
option java_outer_classname = "DataServiceProto";

service DataService {
  rpc ExportData(ExportDataRequest) returns (ExportDataResponse);
  rpc FindData(FindDataRequest) returns (FindDataResponse);
  rpc ImportData(ImportDataRequest) returns (ImportDataResponse);
  rpc InsertData(stream InsertDataRequest) returns (stream InsertDataResponse);
}

message ExportDataRequest {
  SeriesCriteria criteria = 1;
}

message FindDataRequest {
  SeriesCriteria criteria = 1;
  TimeRange time_range = 2;
  SizeControl size_control = 3;
  NullHandler null_handler = 4;
  bool high_precision = 5;
  Reducer time_reducer = 6;
  Reducer series_reducer = 7;
  PartitionPeriod partition = 8;
}

message ImportDataRequest {
  File file = 1;
}

message InsertDataRequest {
  SeriesData data = 1;
  Reducer reducer = 2;
}

message FindDataResponse {
  Status status = 1;
  repeated SeriesData data = 2;
}

message ImportDataResponse {
  Status status = 1;
}

message InsertDataResponse {
  Status status = 1;
}

message ExportDataResponse {
  Status status = 1;
  File file = 2;
}
